# csvmanager

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/commands/: join.rs  mod.rs  split.rs  transform.rs
