[package]
name = "csvmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.21"
deunicode = "1.6.0"
indicatif = "0.17.9"
polars = { version = "0.44.2", features = ["lazy", "csv", "strings"] }
polars-plan = { version = "0.44.2", features = ["string_encoding", "strings"] }
unicode-normalization = "0.1.24"
